src/test/deca/context/invalid/homemade/void_variable.deca
// trying to give a variable the type void

{
    void x;
}